--- a/redux.html
+++ b/redux.html
@@ -37,6 +37,7 @@
   <form id="form">
     <input type="text" name="title" placeholder="Nombre de la Canción">
   </form>
+  <div id="playlist"></div>
   <script src="http://localhost:9000/js/redux.js"></script>
 </body>
 </html>
